--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
     "name": "foxhound/core",
     "require": {
+        "symfony/dependency-injection": "2.5.*",
         "nikic/php-parser": "1.0.0-beta1",
         "monolog/monolog": "1.10.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*"
+    },
+    "autoload": {
+        "psr-4": {"Foxhound\\Core\\": "src/"}
     }
 }
