Revert "Rename source directory to Source"
This reverts commit e0549d4552864ed3f8380e1f8ec14ca9f2b0ddc1.

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
         "phpunit/phpunit": "4.2.*"
     },
     "autoload": {
-        "psr-4": {"Foxhound\\Core\\": "Source/"}
+        "psr-4": {"Foxhound\\Core\\": "src/"}
     }
 }
