Rename what is currently Core package to Foxhound

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "foxhound/core",
+    "name": "foxhound/foxhound",
     "require": {
         "symfony/dependency-injection": "2.5.*",
         "nikic/php-parser": "1.0.0-beta1",
