--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,17 @@
         "php": ">=5.3.2",
         "symfony/dependency-injection": "2.5.*",
         "nikic/php-parser": "1.0.0-beta1",
-        "monolog/monolog": "1.10.*"
+        "monolog/monolog": "1.10.*",
+        "symfony/console": "2.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*"
     },
     "autoload": {
-        "psr-4": {"Foxhound\\Core\\": "src/"}
-    }
+        "psr-4": {
+            "Foxhound\\Core\\": "src/",
+            "Foxhound\\Core\\Commands": "src/commands"
+        }
+    },
+    "bin": ["bin/foxhound"]
 }
