--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "phpunit/phpunit": "4.2.*"
     },
     "autoload": {
-        "psr-4": {"Foxhound\\Core\\": "src/"}
+        "psr-4": {
+            "Foxhound\\Core\\": "src/",
+            "Foxhound\\Module\\": "src/modules"
+        }
     }
 }
